<resources>

    <string name="app_name">Lista de Tareas Mazapan</string>
    <string name="app_version">Version 1.0.0</string>

    <!-- Pantalla main -->
    <string name="txt_titulo_main">Lista de tareas:</string>

    <!-- Pantalla editar/añadir tarea -->
    <string name="btn_back">Atras</string>
    <string name="btn_save">Guardar</string>
    <string name="cb_complete">Completado</string>

    <!-- Item Task -->
    <string name="txt_titulo">Titulo</string>
    <string name="txt_descripcion">Descripcion</string>



</resources>